--- a/cyworld/styles/index.css
+++ b/cyworld/styles/index.css
@@ -72,13 +72,51 @@
 }
 
 .left__body__profile {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: flex-start;
+}
+
+.profile__detail {
+  color: #999999;
+  font-size: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.fas {
+  color: black;
+  margin-right: 10px;
+  width: 5px;
+  height: 5px;
 }
 
 .left__body__footer {
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.wrapper__feel {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
+
+.feel__title {
+  font-size: 11px;
+  margin-bottom: 5px;
+  color: gray;
 }
 
 .wrapper__right {
   width: 524px;
   height: 472px;
-  background-color: violet;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-left: 5px;
 }
