--- a/cyworld/styles/index.css
+++ b/cyworld/styles/index.css
@@ -120,3 +120,36 @@
   justify-content: flex-end;
   padding-left: 5px;
 }
+
+.wrapper__right__header {
+  width: 510px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 0px 14px;
+}
+
+.right__header__title,
+.right__header__setting {
+  color: #55b2e4;
+  font-size: 9px;
+}
+
+.right__header__title {
+  font-size: 16px;
+}
+
+.wrapper__right__body {
+  width: 510px;
+  height: 445px;
+  border: 1px solid gray;
+  border-radius: 15px;
+  background-color: white;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
