--- a/cyworld/styles/home.css
+++ b/cyworld/styles/home.css
@@ -57,3 +57,10 @@ body {
   width: 100%;
   height: 270px;
 }
+
+.content__body {
+  width: 100%;
+  height: 90%;
+  background-color: gray;
+  margin-top: 10px;
+}
