--- a/cyworld/styles/home.css
+++ b/cyworld/styles/home.css
@@ -58,9 +58,9 @@ body {
   height: 270px;
 }
 
-.content__body {
+.video {
+  margin-top: 15px;
   width: 100%;
-  height: 90%;
-  background-color: gray;
-  margin-top: 10px;
+  height: 240px;
+  background-color: #c4c4c4;
 }
