--- a/cyworld/styles/index.css
+++ b/cyworld/styles/index.css
@@ -153,3 +153,32 @@ iframe {
   height: 100%;
   border: none;
 }
+
+.navigation {
+  width: 62px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  left: 774px;
+  top: 110px;
+}
+
+.navigation__item {
+  width: 60px;
+  height: 30px;
+  font-size: 10px;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 0px 10px 10px 0px;
+  color: white;
+  background-color: #298eb5;
+  line-height: 30px;
+  cursor: pointer;
+}
+
+.navigation__item:hover {
+  background-color: white;
+  color: black;
+}
