--- a/css-basic/my-diary/index.css
+++ b/css-basic/my-diary/index.css
@@ -92,3 +92,58 @@ body {
   font-size: 14px;
   text-align: right;
 }
+
+.header {
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid gray;
+}
+
+.header-inner {
+  width: 900px;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 100px;
+}
+
+.logo h1 a {
+  text-decoration: none;
+  color: orange;
+}
+
+.menu__ul {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu__ul li {
+  list-style: none;
+}
+
+.menu__ul li a {
+  color: black;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: black;
+}
+
+.menu__ul li a:hover {
+  color: orange;
+}
+
+.user {
+  width: 100px;
+  height: 80px;
+  padding-top: 23px;
+}
